--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,19 @@
 spring.application.name=erpdemo
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hiteshparmar782002@gmail.com
+spring.mail.password=zqpq dmho zxii vfim
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.mail.smtp.starttls.required=true
+
+#Producer configuration
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mondodb.database=erpbooks1
