--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,26 @@
     <artifactId>spring-boot-starter-mail</artifactId>
 </dependency>
 
- <dependency>
+ <!-- <dependency>
       <groupId>org.springframework.kafka</groupId>
       <artifactId>spring-kafka</artifactId>
+    </dependency>  -->
+    
+    <!-- https://mvnrepository.com/artifact/org.javers/javers-core -->
+    <dependency>
+    <groupId>org.javers</groupId>
+    <artifactId>javers-core</artifactId>
+    <version>3.1.0</version>
     </dependency>
+    
+    
+    <dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.5.0</version>
+</dependency>
 
+ 
 	 <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
