--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,13 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 
+# for actuator end point
+management.endpoints.web.exposure.include=*
+
+# thymeleaf configuration
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mondodb.database=erpbooks1
