--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,18 @@
       <scope>test</scope>
     </dependency>
 
+	<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-thymeleaf</artifactId>
+</dependency>
+
+
+
 	</dependencies>
 
 	<build>
